tests/ui/missing_type_with_identifier.stderr
error: Invalid response format. Expected: <status>: <type> - <description>
  --> tests/ui/missing_type_with_identifier.rs:10:1
   |
10 | /// 200: Todo user information
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
